# RunPerf

./: .gitignore  ACCEPTABLE_USE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARKS.md  WHITEPAPER.md
ebpf/: runperf_xdp.c
src/: affinity.rs  main.rs  net.rs  simd.rs
src/xdp/: frame.rs  gen.rs  loader.rs  mod.rs  sink.rs  socket.rs  umem.rs
tests/: loopback.rs
